@@ -6,43 +6,77 @@
 #include "events.h"
 #include "uae.h"
 
-#if defined(USE_GLIB)
+// #ifdef _WIN32
+// #define USE_LEGACY_WIN32_TIME_FUNCTIONS 1
+// #else
+#define USE_GLIB_TIME_FUNCTIONS 1
+// #endif
+
+#ifdef USE_GLIB_TIME_FUNCTIONS
 
 #include <glib.h>
 
-static gint64 epoch;
+static gint64 uae_time_epoch;
 
 uae_time_t uae_time(void)
 {
-	return (uae_time_t) g_get_monotonic_time();
+	int64_t t = g_get_monotonic_time() - uae_time_epoch;
+	// Will overflow in 49.71 days. Whether that is a problem depends on usage.
+	// Should go through all old uses of read_processor_time / uae_time and
+	// make sure to use overflow-safe code or move to 64-bit timestamps.
+	return (uae_time_t) t;
 }
+
+// Since GLib 2.53.3, g_get_monotonic times uses QueryPerformanceCounter on
+// Windows. So we can now use this on all platforms.
+// I don't think the value can be negative, but resolution is high enough that
+// we don't need to care about signed/unsigned, so we just use int64_t.
 
 int64_t uae_time_us(void)
 {
-	return g_get_monotonic_time();
+	// We subtrach epoch here so that this function uses the same epoch as
+	// the 32-bit uae_time legacy function. Maybe not necessary.
+	return g_get_monotonic_time() - uae_time_epoch;
 }
 
+#if 0
+// Don't think we need this kind of precision in slirp_uae
 int64_t uae_time_ns(void)
 {
+#ifdef _WIN32
+
+else
+	// FIXME: Should probably copy time functions from Glib if neccessary to
+	// get nanosecond precision, so that we can use the macOS nanosecond
+	// implementation, and then use the same code for the usec one (except
+	// dividing by 1000) so that the timers are compatible (same epoch).
 	struct timespec ts;
 	clock_gettime(CLOCK_MONOTONIC, &ts);
 	return ts.tv_sec * 1000000000LL + ts.tv_nsec;
+#endif
 }
+#endif
 
 void uae_time_calibrate(void)
 {
 
 }
 
-#else
+void uae_time_init(void)
+{
+	if (uae_time_epoch == 0) {
+		uae_time_epoch = g_get_monotonic_time();
+	}
+}
 
-#ifdef _WIN32
+#endif // USE_GLIB_TIME_FUNCTIONS
+
+#ifdef USE_LEGACY_WIN32_TIME_FUNCTIONS
 
 #include <process.h>
 
 static int userdtsc = 0;
 static int qpcdivisor = 0;
-static SYSTEM_INFO si;
 
 static frame_time_t read_processor_time_qpf(void)
 {
@@ -178,9 +212,6 @@ static void figure_processor_speed_qpf(void)
 
 void uae_time_calibrate(void)
 {
-	if (si.dwNumberOfProcessors > 1) {
-		userdtsc = 0;
-	}
 	if (userdtsc) {
 		figure_processor_speed_rdtsc();
 	}
@@ -194,9 +225,22 @@ void uae_time_use_rdtsc(bool enable)
 	userdtsc = enable;
 }
 
-#endif // _WIN32
+void uae_time_init(void)
+{
+	static bool initialized = false;
+	if (initialized) {
+		return;
+	}
+	static SYSTEM_INFO si;
+	GetSystemInfo(&si);
+	if (si.dwNumberOfProcessors > 1) {
+		userdtsc = 0;
+	}
+	uae_time_calibrate();
+	initialized = true;
+}
 
-#endif
+#endif // USE_WIN32_TIME_FUNCTIONS
 
 #ifdef FSUAE
 
@@ -223,20 +267,3 @@ void uae_deterministic_amiga_time(int *days, int *mins, int *ticks)
 }
 
 #endif
-
-void uae_time_init(void)
-{
-	static bool initialized = false;
-	if (initialized) {
-		return;
-	}
-#if defined(USE_GLIB)
-	// Doesn't need system info
-#else
-#ifdef _WIN32
-	GetSystemInfo(&si);
-#endif
-#endif
-	uae_time_calibrate();
-	initialized = true;
-}
