@@ -1,6 +1,7 @@
 Version 3.2.x:
 
 * Backported builtin slirp from FS-UAE 4 (fixes A2065 instability).
+* Use g_get_monotonic_time() for high-resolution time on Windows as well.
 
 Version 3.1.x:
 
